--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@quasar/extras": "^1.16.4",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
+    "sortablejs": "^1.15.6",
+    "sortablejs-vue3": "^1.2.11",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
   },
